--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,4 @@
+html,
 body {
     margin: 0;
     padding: 0;
@@ -103,45 +104,6 @@ body {
     font-size: 16px;
     line-height: 36px;
     color: #292929;
-}
-
-.work-area {
-    display: flex;
-    width: 100%;
-    height: 81%;
-}
-
-.card {
-    width: 25%;
-}
-
-#first-card {
-    background-color: #ff5555;
-}
-
-#second-card {
-    background-color: #ff7373;
-    padding-top: 3rem;
-}
-
-#third-card {
-    background-color: #ff9f9f;
-    padding-top: 9rem;
-}
-
-#fourth-card {
-    background-color: #ffd1d1;
-    padding-top: 15rem;
-}
-
-.disp-letter {
-    font-family: Playfair Display;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 200px;
-    letter-spacing: 0.1em;
-    color: #ffffff;
-    text-shadow: 5px 5px 20px rgba(0, 0, 0, 0.14);
 }
 
 .third-screen {
