--- a/portfolio.css
+++ b/portfolio.css
@@ -26,12 +26,6 @@ html {
     color: #000000;
     text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
-/* 
-.social-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .icon {
     margin: 0 0.5rem;
@@ -45,13 +39,79 @@ html {
     height: 45px;
     border-radius: 2px;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid #292929;
+    transition: 0.3s;
+}
+
+.b1:hover {
+    background-color: #292929;
+    color: white;
 }
 
 .button-text {
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 500;
+}
+
+.message-form {
+    width: 40rem;
+    display: none;
+}
+
+.e-mail {
+    border: 1px solid black;
+    background-color: white;
+    font-family: Montserrat;
+    font-size: 16;
+    font-style: italic;
+    font-weight: 600;
+    width: 100%;
+    height: 2.5rem;
+    padding: 0.2rem 1rem;
+    transition: 0.3s;
+}
+
+.message {
+    border: 1px solid black;
+    background-color: white;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 16;
+    transition: 0.3s;
+}
+
+.e-mail::placeholder,
+.message::placeholder {
+    font-style: italic;
+    color: #c9c9c9;
+}
+
+.send-btn {
+    margin: 0.6rem 0;
+    border: 1px solid #292929;
+    color: #292929;
+    background-color: white;
+    width: fit-content;
+    margin: auto;
+    padding: 0.3rem 2rem;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: 600;
+    transition: 0.3s;
+}
+
+.e-mail:hover,
+.message:hover {
+    border: 1px solid #ff5959;
+}
+
+.send-btn:hover {
+    background: #292929;
+    color: white;
 }
 
 @media screen and (max-width: 400px) {
@@ -61,5 +121,15 @@ html {
 
     .icon {
         margin: 0 0.1rem;
+    }
+
+    .message-form {
+        width: 100%;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 700px) {
+    .message-form {
+        width: 100%;
     }
 }
